Add code from 5/20 lecture.

--- a/todos/index.html
+++ b/todos/index.html
@@ -22,11 +22,11 @@
             <div>
                 <div class="todo-list-container">
                     <h2>Incomplete</h2>
-                    <ul id="incomplete-todos"></ul>
+                    <ul id="incomplete-todos" data-testid="incomplete-todos"></ul>
                 </div>
                 <div class="todo-list-container">
                     <h2>Completed</h2>
-                    <ul id="completed-todos"></ul>
+                    <ul id="completed-todos" data-testid="completed-todos"></ul>
                 </div>
             </div>
         </div>
